# quoridor

./: .gitignore  .travis.yml  Cargo.toml  README.md
alpha_zero/: Coach.py  MCTS.py  alpha_zero_game.py  connect_to_server.py  game_wrapper.py  main.py  nnet.py  quoridor_nnet.py  tcp_quoridor.py
py_imp/: Arena.py  Coach.py  MCTS.py  NNet.py  QNNet.py  QuoridorGame.py  main.py  pit.py  quoridor.py
quoridor-ai/: Cargo.toml
quoridor-ai/src/: greedy.rs  lib.rs  mcts.rs  rubot.rs
quoridor-cli/: Cargo.toml
quoridor-cli/src/: display.rs  main.rs  replay.rs
quoridor-game/: Cargo.toml
quoridor-game/src/: ai.rs  bitpacked.rs  lib.rs  v1.rs
quoridor-game/src/ai/: greedy.rs  mcts.rs  mod.rs  rubot.rs
quoridor-python/: Cargo.toml
quoridor-python/src/: lib.rs
quoridor-wasm/: Cargo.toml
quoridor-wasm/src/: lib.rs
quoridor-wasm/www/: ai_worker.js  board.js  bootstrap.worker.js  history-view.js  index.html  index.js  package-lock.json  package.json  rtc.js  webpack.config.js  webpack.prod.js
src/: ai.rs  bitpacked.rs  display.rs  game.rs  main.rs  tcp.rs
test_runner/: Cargo.toml
test_runner/benches/: bench1.rs
test_runner/src/: main.rs
