[package]
name = "quoridor-ai"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quoridor-game = { path = "../quoridor-game" }
fxhash = "0.2.1"
mcts = "0.3.0"
rubot = ""
