[package]
name = "quoridor-cli"
version = "0.1.0"
authors = ["Sheyne Anderson <sanderson@novacoast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = ""
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
quoridor-game = { path = "../quoridor-game" }
parse-display = "0.4.1"
