[package]
name = "quoridor-game"
version = "0.1.0"
authors = ["Sheyne Anderson <sanderson@novacoast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pathfinding = "2.1.2"
fxhash = "0.2.1"