[package]
name = "quoridor-python"
version = "0.1.0"
authors = ["Sheyne Anderson <sanderson@novacoast.com>"]
edition = "2018"

[lib]
name = "quoridor_python"

crate-type = ["cdylib"]

[dependencies]
quoridor-game = { path = "../quoridor-game" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
