[package]
name = "test_runner"
version = "0.1.0"
authors = ["Sheyne Anderson <sanderson@novacoast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quoridor-game = { path = "../quoridor-game" }
mcts =  "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench1"
harness = false
